Publication de la N2 - 3ième tentative

--- a/newsletters/2.md
+++ b/newsletters/2.md
@@ -1,6 +1,6 @@
-# Les grandes nouveautés de l'été et nos projets pour la rentrée - 2nde édition
+# Les grandes nouveautés de l'été et nos projets pour la rentrée - 3ième  édition
 
-Bonjour à toute la communauté !
+Bonjour à toute la communauté !!!!
 
 L'été a été chargé et nous sommes ravis de partager avec vous les dernières avancées de notre projet, ainsi qu'un aperçu de ce qui vous attend en septembre. C'est parti !
 
