Update and rename 2025-08-01-MOnfrigo to 2025-08-01-MOnfrigo.md

--- a/_posts/2025-08-01-MOnfrigo.md
+++ b/_posts/2025-08-01-MOnfrigo.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: "Mon frigo connecté est devenu un philosophe stoïcien "
+title: "Mon frigo connecté est devenu un philosophe stoïcien ... "
 ---
 
 # Mon frigo connecté est devenu un philosophe stoïcien (et c'est un problème systémique)
